--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^4.7.0",
     "pug": "^3.0.2",
