--- a/package.json
+++ b/package.json
@@ -31,15 +31,13 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^4.7.0",
+    "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
     "sharp": "^0.30.4",
     "slugify": "^1.6.5",
     "stripe": "^8.218.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
-  },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5"
   },
   "engines": {
     "node": ">=10.0.0"
